--- a/styles/01.css
+++ b/styles/01.css
@@ -4,43 +4,89 @@
 body{
     font-family: sans-serif;
 }
-h1{
-    margin: 20px 0;
-    text-align: center;
-}
-ul{
-    margin: 15px 0;
-    justify-content: center;
-    list-style: none;
-    display: flex;
-}
-ul li{
-    margin-right: 30px;
-}
-img{
-    margin: 15px 0;
+header{
+    height: 40vh;
     width: 100%;
-    height: 60vh;
 }
-table{
-    margin: 15px 0;
-    margin-left: 10vw;
-    display: flex;
-    justify-content: left;
+header img{
+    width: 100%;
+    height: 40vh;
+}
+nav{
+    width: 100%;
+    height: 23vh;
+}
+nav ul{
+    padding: 20px 0;
+    list-style: none;
     text-align: center;
-    border-collapse: collapse;
 }
-th, tr ,td{
-    padding: 15px;
-    border: 1px black solid;
+nav ul li{
+    font-size: 19px;
+    margin: 15px 0;
 }
-
-.container{
+.contenedor{
+    color: white;
+    background-color: black;
     display: flex;
 }
-video{
-    margin-top: 55px;
-    margin-left: 250px;
-    width: 640px;
-    height: 360px;
+body article{
+    
+    width: 60%;
+    height: 700px;
+}
+.contenedor article h1{
+    font-style: oblique;
+    margin-top: 25px;
+    text-align: center;
+}
+.contenedor article section{
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.contenedor article section video{
+    margin: 0;
+    padding: 0;
+    width: 50vw;
+    height: 500px;
+}
+body aside{
+    padding: 40px 30px;
+}
+body aside{
+
+    width: 40%;
+    height: 700px;
+}
+body aside table, th, tr, td{
+    padding: 10px;
+    border-collapse: collapse;
+    border: 1px white solid;
+    text-align: center;
+}
+body aside{
+    display: flex;
+}
+footer{
+    color: white;
+    background-color: black;
+    width: 100%;
+    height: 100px;
+}
+footer p{
+    padding-top: 45px;
+    text-align: center;
+}
+.article2{
+    width: 100%;
+}
+.box{
+    display: flex;
+}
+.box img{
+    padding: 18px;
+    width: 190px;
+    height: 200px;
 }
